Po izvedeni tabeli seznama opravil

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,9 @@
             <li><a href="/">Home</a></li>
             <li><a href="/stoparca">Štoparca</a></li>
             <li><a href="/trenutnicas">Trenutni čas</a></li>
+              <li><a href="/opravila">opravila</a></li>
+              <li><a href="/seznam_opravil">Seznam opravil</a></li>
+
           </ul>
         </div><!--/.nav-collapse -->
       </div>
