--- a/templates/opravila_rezultat.html
+++ b/templates/opravila_rezultat.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
 {% block vsebina %}
-Vsebina TRENUTNI ČAS strani.
-<p>
-Ura je: {{ura}}
+Vsebina OPRAVILA-REZULTAT strani.
+
 <br>
-Datum: {{datum}}
 
 
+<p>
+   Vpisal si: {{rezultat}}
 </p>
 {% endblock vsebina %}
