--- a/templates/rezultat.html
+++ b/templates/rezultat.html
@@ -1,12 +1,8 @@
 {% extends "base.html" %}
 
 {% block vsebina %}
-Vsebina TRENUTNI ČAS strani.
+Vsebina REZULTAT
 <p>
-Ura je: {{ura}}
-<br>
-Datum: {{datum}}
-
 
 </p>
 {% endblock vsebina %}
