--- a/templates/stoparca.html
+++ b/templates/stoparca.html
@@ -2,4 +2,29 @@
 
 {% block vsebina %}
 Vsebina ŠTOPARCA strani.
+
+<br>
+<table border="3">
+<thead>
+<tr>Heading 1</tr>
+<tr>Heading 2</tr>
+</thead>
+<tbody>
+<tr>
+<td >Stoplec 1</td>
+<td >Stolpec 2</td>
+</tr>
+<tr>
+<tr>
+<td contenteditable='true'></td>
+<td contenteditable='true'></td>
+</tr>
+<tr>
+<td contenteditable='true'></td>
+<td contenteditable='true'></td>
+</tr>
+</tbody>
+</table>
+
+<p>{{sporocilo}}</p>
 {% endblock vsebina %}
