--- a/templates/posamezno_opravilo.html
+++ b/templates/posamezno_opravilo.html
@@ -9,7 +9,12 @@
 <p>ID Opravila: {{opravilo.key.id()}}</p>
 
 </p>
+<a class="btn btn-default" href="/opravilo/{{opravilo.key.id()}}/uredi">Uredi</a>
+<br>
+<br>
+<a class="btn btn-default" href="/opravilo/{{opravilo.key.id()}}/izbrisi_v_kos">V Koš</a>
+<br>
+<br>
+<a class="btn btn-default" href="/opravilo/{{opravilo.key.id()}}/dokoncno_izbrisi">Izbriši</a>
+
 {% endblock vsebina %}
-
-
-
